# tgmock_20250714

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/tg/: dummy.cpp  dummy.hpp
tests/: CMakeLists.txt
